fixing extra width problem on mobile

--- a/iris/src/Assets/scss/default.scss
+++ b/iris/src/Assets/scss/default.scss
@@ -4,6 +4,12 @@
 @import "experience.scss";
 @import "projects.scss";
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .main {
     margin: 50px 0px 0 220px;
     padding: 0 20px;
@@ -18,19 +24,18 @@
 }
 
 footer {
-    width: 100%;
-    height: 30px;
+    height: 20px;
     text-align: center;
     color: $gray;
     font-size: 14px;
-    margin: 10px;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 /*
 smaller screens
 */
 
-// TODO: make it look pretty for small screens (hamburger menu, font sizes)
 @media screen and (max-height: 450px) {
     .sidenav {
         padding-top: 15px;
